# search-engine

./: .gitignore  CMakeLists.txt  Engine.cpp  Logger.cpp  README.md  Searcher.cpp  Storage.cpp  answer.json  conf.json  inlcudes.cpp  main.cpp  requests.json
examples/: EXAMPLES.md  conf.json  request.json
headers/: Engine.h  Logger.h  Searcher.h  includes.h
includes/: Engine.h  Jsoner.h  Logger.h  Searcher.h  Storage.h  includes.h
src/: CMakeLists.txt  Engine.cpp  Jsoner.cpp  Logger.cpp  Searcher.cpp  Storage.cpp  inlcudes.cpp  main.cpp
src/headers/: Storage.h
test/: CMakeLists.txt  Engine_test.cpp  Jsoner_test.cpp  Logger_test.cpp  Storage_test.cpp  answer.json  conf.json  requests.json
test/.files/: filesInfo.json
test/files/: 1.bad  1.txt  1.yml  2.txt  2.yml  3.txt  3.yml
